--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -7,3 +7,21 @@
     border: solid 1px #888;
     background-color: #DDD8C4;
   }
+h1 {
+  margin-left: 20px;
+  color: blue;
+  font:200;
+  }
+
+p {
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-bottom: 20px;
+  font-family:"Verdana";
+  text-indent: 20px; 
+}
+
+#content {
+  border-style: dotted;
+
+}
