--- a/lab3/css/lab.css
+++ b/lab3/css/lab.css
@@ -5,5 +5,17 @@
     padding: 10px;
     margin-bottom: 10px;
     border: solid 1px #888;
-    background-color: #DDD8C4;
+    background-color: skyblue;
   }
+
+.screenshots{
+  margin-left: 10px;
+  max-width: 500px;
+  max-height: 1000px;
+}
+
+#output p{
+  font-size: 15px;
+  color: gray;
+  margin-left: 50px;
+}
