--- a/lab4/css/lab.css
+++ b/lab4/css/lab.css
@@ -2,8 +2,20 @@
 
 /* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
 .minor-section {
-    padding: 10px;
-    margin-bottom: 10px;
-    border: solid 1px #888;
-    background-color: #DDD8C4;
-  }
+  padding: 10px;
+  margin-bottom: 10px;
+  border: solid 1px #888;
+  background-color: skyblue;
+}
+
+.screenshots{
+margin-left: 10px;
+max-width: 500px;
+max-height: 1000px;
+}
+
+#output p{
+font-size: 15px;
+color: gray;
+margin-left: 50px;
+}
